# gex-app

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  gex-dashboard.html  plan.md  pyproject.toml  start.sh
.claude/: settings.json  settings.local.json
.claude/command/: build.md  onboard.md
.claude/plans/: 1-opensource-prep.md  2026-05-15-resizable-ladder-height.md
backend/: .env.example  config.py  main.py  models.py
backend/adapters/: base.py  flash_alpha.py  polygon.py  seed.py  tradier.py
backend/routers/: gex.py  intraday.py  system.py
backend/services/: cache.py  snapshots.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  api.js  index.css  utils.js
frontend/src/components/: GEXHeatmap.jsx  GEXProfileChart.jsx  InstrumentColumn.jsx  IntradayChart.jsx  LayoutToggle.jsx  LoadingSkeleton.jsx  StatCard.jsx  StrikeRow.jsx
frontend/src/components/shell/: Sidebar.jsx  TopBar.jsx
frontend/src/components/ui/: badge.jsx  button.jsx  card.jsx  skeleton.jsx  tabs.jsx
frontend/src/hooks/: useGEXData.js  useIntraday.js  useTheme.js
frontend/src/lib/: format.js
frontend/src/views/: B3Mode.jsx  ExpiryMode.jsx  Settings.jsx  WatchlistMode.jsx
