[project]
name = "gex-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.28.1",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.14.1",
    "tzdata>=2026.2",
    "uvicorn[standard]>=0.30.0",
]
